--- a/templates/base.html
+++ b/templates/base.html
@@ -12,19 +12,46 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-<body style="background-color:black">
+<body style="background-color:rgb(85, 128, 163)">
 
   <h1 style="text-align:center">Face Recognition</h1>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">Home</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link" href="/uploadface">Add new face</a>
-        <a class="nav-item nav-link" href="/video_feeed">Face recognition</a>
-      </div>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/gallery">Gallery</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/face_rec">Recognize face</a>
+        </li>
+        {% if session['id'] == 1 %}
+        <li class="nav-item">
+          <a class="nav-link" href="/admin">Admin</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/uploadface">Upload face</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/searchface">Search face</a>
+        </li>
+        {% endif %}
+      </ul>
+      {% if session['loggedin'] == True %}
+        <a class="nav-link" href="/logout">Log out</a>
+        {% if session['id'] == 1 %}
+          <a class="nav-link" href="/register">Add user</a>
+        {% endif %}
+      {% else %}
+        <a class="nav-link" href="/login">Log in</a>
+      {% endif %}
+      
     </div>
   </nav>
 
