--- a/templates/save_upload.html
+++ b/templates/save_upload.html
@@ -4,7 +4,8 @@
 <h1>Input face name</h1>
 <img src = "{{filename}}" style="width: 50%">
 <form method=post>
-<input type=text name=facename>
+<input type=text name=firstname>
+<input type=text name=surname>
 <input type=submit value=Add>
 </form>
 {% endblock %}
