--- a/templates/video_feeed.html
+++ b/templates/video_feeed.html
@@ -3,14 +3,56 @@
 <title>Face Rec</title>
 <h1>Face Recognition</h1>
 <h3>{{message}}</h3>
-<img src = "{{ url_for('video_feed') }}" style = 'width:50%'>
+<div class = "row">
+    <div class = "col-9">
+        <img id="video" src="{{ url_for('video_feed',source = source, model = model, blur = blur, noise = noise, remove_noise = remove_noise) }}" width="640" height="480" />
+        <form action="{{ url_for('get_frame') }}">
+            <input type="submit" value="Zapisz klatkę">
+        </form>
+    </div>
+    <div class = "col-3 menu">
+        <form  id="remove_noise" action="" method="post">
+            <div class="my_button">
+                <input type ="submit" name="remove_noise" value="Median filter">
+            </div>
+            <div class="my_button">
+                <input type ="submit" name="remove_noise" value="Gaussian filter">
+            </div>
+            <div class="my_button">
+                <input type ="submit" name="remove_noise" value="Average filter">
+            </div>
+            <div class="my_button">
+                <input type ="submit" name="remove_noise" value="Bilateral filter">
+            </div>
+        </form>
+    </div>
+</div>
 
-<form action="/get_framee">
-    <input type="submit" value="Add face" />
-</form> 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            // Zapisywanie klatki
+            function saveFrame() {
+                var video = document.getElementById('video');
+                var canvas = document.createElement('canvas');
+                canvas.width = video.videoWidth;
+                canvas.height = video.videoHeight;
+                var context = canvas.getContext('2d');
+                context.drawImage(video, 0, 0, canvas.width, canvas.height);
+                var frameData = canvas.toDataURL('image/jpeg');
 
-<script>
+                $.ajax({
+                    type: 'POST',
+                    url: '/save_frame',
+                    data: {frameData: frameData},
+                    success: function(response) {
+                        alert(response);
+                    }
+                });
+            }
 
-</script>
+            $('#saveBtn').click(saveFrame);
+        });
+    </script>
 
 {% endblock %}
